--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   <script src="js/modernizr-2.5.3.min.js"></script>
 </head>
-<body data-spy="scroll" data-target=".nav" data-offset="50">
+<body data-spy="scroll" data-target=".nav">
 
   <div class="navbar navbar-fixed-top">
     <div class="navbar-inner">
@@ -108,6 +108,12 @@
                             </div>
                           </div>
                         </div>
+                         <div class="control-group">
+                          <label class="control-label" for="colour">Colour</label>
+                          <div class="controls">
+                            <input type="text" class="span1" id="colour">
+                          </div>
+                        </div>
                       </fieldset>
                     </form>
                   </div>
@@ -131,6 +137,9 @@
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
   <script>window.jQuery || document.write('<script src="js/jquery-1.7.2.min.js"><\/script>')</script>
   <script src="js/bootstrap.min.js"></script>
-
+  <script src="js/bootstrap-colorpicker.js"></script>
+  <script>
+  $('#colour').colorpicker();
+  </script>
 </body>
 </html>
